--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "John Doe - Portfolio",
-  "short_name": "JD Portfolio",
-  "description": "Full Stack Developer & Creative Problem Solver",
+  "name": "Ruben Saporne - Portfolio",
+  "short_name": "RS Portfolio",
+  "description": "Full Stack Developer",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#1f2937",
